--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Reynolds Industries — Liquid Snake</title>
+<title>Reynolds Industries — Mixing Mamba</title>
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -384,3 +384,4 @@
 </script>
 </body>
 </html>
+
